--- a/tark-provision-calc/app/styles.css
+++ b/tark-provision-calc/app/styles.css
@@ -26,8 +26,8 @@
 }
 
 .responseOutput {
-	background-color: "white";
-	color: "black";
+	background-color: "#3f51b5";
+	color: "white";
 	padding: "5px 15px";
 	border-radius: "5px";
 	box-shadow: "0px 2px 2px lightgray";
