--- a/tark-provision-calc/app/styles.css
+++ b/tark-provision-calc/app/styles.css
@@ -26,10 +26,22 @@
 }
 
 .responseOutput {
-	background-color: "#3f51b5";
-	color: "white";
-	padding: "5px 15px";
-	border-radius: "5px";
-	box-shadow: "0px 2px 2px lightgray";
-	font-family: "monospace";
+	background-color: white;
+	color: black;
+	padding: 5px 15px;
+	border-radius: 5px;
+	box-shadow: 0px 2px 2px lightgray;
+	font-family: monospace;
+	margin-bottom: 5px;
+}
+
+.verticalDiv {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.horizontalDiv {
+	display: flex;
+	align-items: center;
 }
